another fix for flipping cards on mobile

--- a/css/dictionary.css
+++ b/css/dictionary.css
@@ -18,7 +18,13 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover, .flip-card:active .flip-card-inner {
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card:active .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card:focus .flip-card-inner {
   transform: rotateY(180deg);
 }
 
